--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -1,5 +1,6 @@
 @import url(https://fonts.googleapis.com/css?family=Raleway:100,100i,200,200i,300,300i,400,400i,500,500i,600,600i,700,700i,800,800i,900,900i);
-@import url(https://fonts.googleapis.com/css?family=Merriweather:300,300i,400,400i,700,700i,900,900i);
+@import url(https://fonts.googleapis.com/css?family=Anton:400);
+@import url(https://fonts.googleapis.com/css?family=Titillium+Web:200,200i,300,300i,400,400i,600,600i,700,700i,900);
 @import url(https://fonts.googleapis.com/css?family=Rubik:300,300i,400,400i,500,500i,700,700i,900,900i);
 @import url(https://fonts.googleapis.com/css?family=Noticia+Text:400,400i,700,700i);
 
@@ -30,7 +31,7 @@ body {
   font-size: 6.8rem;
 }
 .display-2 {
-  font-family: 'Raleway', sans-serif;
+  font-family: 'Anton', sans-serif;
   font-size: 3rem;
 }
 .display-2 > .mbr-iconfont {
@@ -44,7 +45,7 @@ body {
   font-size: 1.6rem;
 }
 .display-5 {
-  font-family: 'Merriweather', serif;
+  font-family: 'Titillium Web', sans-serif;
   font-size: 2.2rem;
 }
 .display-5 > .mbr-iconfont {
@@ -1606,10 +1607,6 @@ body {
 .cid-qTkzRZLJNu .collapsed .navbar-collapse.show .navbar-nav .nav-item {
   clear: both;
 }
-.cid-qTkzRZLJNu .collapsed .navbar-collapse.collapsing .navbar-nav .nav-item:last-child,
-.cid-qTkzRZLJNu .collapsed .navbar-collapse.show .navbar-nav .nav-item:last-child {
-  margin-bottom: 1rem;
-}
 .cid-qTkzRZLJNu .collapsed .navbar-collapse.collapsing .navbar-buttons,
 .cid-qTkzRZLJNu .collapsed .navbar-collapse.show .navbar-buttons {
   text-align: center;
@@ -1704,10 +1701,6 @@ body {
   .cid-qTkzRZLJNu .navbar-collapse.show .navbar-nav .nav-item {
     clear: both;
   }
-  .cid-qTkzRZLJNu .navbar-collapse.collapsing .navbar-nav .nav-item:last-child,
-  .cid-qTkzRZLJNu .navbar-collapse.show .navbar-nav .nav-item:last-child {
-    margin-bottom: 1rem;
-  }
   .cid-qTkzRZLJNu .navbar-collapse.collapsing .navbar-buttons,
   .cid-qTkzRZLJNu .navbar-collapse.show .navbar-buttons {
     text-align: center;
@@ -1769,7 +1762,7 @@ body {
   color: #c1c1c1 !important;
 }
 .cid-r4L5hf1EhU {
-  background-image: url("../../../assets/images/img-5370-2000x1500.jpg");
+  background-image: url("../../../assets/images/scan-1-979x647.jpg");
 }
 .cid-r4L5hf1EhU H1 {
   color: #ffffff;
@@ -1846,6 +1839,14 @@ body {
   .cid-r61e91xuFr .inner-container {
     width: 100% !important;
   }
+}
+.cid-r61eZkdMfT {
+  padding-top: 30px;
+  padding-bottom: 30px;
+  background-color: #ffffff;
+}
+.cid-r61eZkdMfT .mbr-section-subtitle {
+  color: #232323;
 }
 .cid-r5pTVEOVCd .navbar {
   padding: .5rem 0;
@@ -2074,10 +2075,6 @@ body {
 .cid-r5pTVEOVCd .collapsed .navbar-collapse.show .navbar-nav .nav-item {
   clear: both;
 }
-.cid-r5pTVEOVCd .collapsed .navbar-collapse.collapsing .navbar-nav .nav-item:last-child,
-.cid-r5pTVEOVCd .collapsed .navbar-collapse.show .navbar-nav .nav-item:last-child {
-  margin-bottom: 1rem;
-}
 .cid-r5pTVEOVCd .collapsed .navbar-collapse.collapsing .navbar-buttons,
 .cid-r5pTVEOVCd .collapsed .navbar-collapse.show .navbar-buttons {
   text-align: center;
@@ -2172,10 +2169,6 @@ body {
   .cid-r5pTVEOVCd .navbar-collapse.show .navbar-nav .nav-item {
     clear: both;
   }
-  .cid-r5pTVEOVCd .navbar-collapse.collapsing .navbar-nav .nav-item:last-child,
-  .cid-r5pTVEOVCd .navbar-collapse.show .navbar-nav .nav-item:last-child {
-    margin-bottom: 1rem;
-  }
   .cid-r5pTVEOVCd .navbar-collapse.collapsing .navbar-buttons,
   .cid-r5pTVEOVCd .navbar-collapse.show .navbar-buttons {
     text-align: center;
@@ -2236,18 +2229,10 @@ body {
 .cid-r5pTVEOVCd .dropdown-item:hover {
   color: #c1c1c1 !important;
 }
-.cid-r61eZkdMfT {
-  padding-top: 30px;
-  padding-bottom: 30px;
-  background-color: #ffffff;
-}
-.cid-r61eZkdMfT .mbr-section-subtitle {
-  color: #232323;
-}
 .cid-r612L4Pm2U {
   padding-top: 0px;
   padding-bottom: 0px;
-  background-color: #465052;
+  background-color: #ffffff;
 }
 .cid-r612L4Pm2U .mbr-slider .carousel-control {
   background: #1b1b1b;
@@ -2274,7 +2259,7 @@ body {
   opacity: 0;
   -webkit-transition: 0.2s opacity ease-in-out;
   transition: 0.2s opacity ease-in-out;
-  background: linear-gradient(to left, #554346, #45505b) !important;
+  background: linear-gradient(to left, #554346, #232323) !important;
 }
 .cid-r612L4Pm2U .mbr-gallery-item > div:hover .mbr-gallery-title::before {
   background: transparent !important;
@@ -2304,7 +2289,284 @@ body {
   opacity: 0;
   -webkit-transition: 0.2s background ease-in-out;
   transition: 0.2s background ease-in-out;
-  background: linear-gradient(to left, #554346, #45505b) !important;
+  background: linear-gradient(to left, #554346, #232323) !important;
+}
+.cid-r8h7UrMf8w {
+  padding-top: 45px;
+  padding-bottom: 45px;
+  background-color: #ffffff;
+}
+.cid-r8h7UrMf8w .content-slider {
+  display: -webkit-flex;
+  justify-content: center;
+  -webkit-justify-content: center;
+}
+.cid-r8h7UrMf8w .modal-body .close {
+  background: #1b1b1b;
+}
+.cid-r8h7UrMf8w .modal-body .close span {
+  font-style: normal;
+}
+.cid-r8h7UrMf8w .carousel-inner > .active,
+.cid-r8h7UrMf8w .carousel-inner > .next,
+.cid-r8h7UrMf8w .carousel-inner > .prev {
+  display: -webkit-flex;
+}
+.cid-r8h7UrMf8w .carousel-control .icon-next,
+.cid-r8h7UrMf8w .carousel-control .icon-prev {
+  margin-top: -18px;
+  font-size: 40px;
+  line-height: 27px;
+}
+.cid-r8h7UrMf8w .carousel-control:hover {
+  background: #1b1b1b;
+  color: #fff;
+  opacity: 1;
+}
+@media (max-width: 767px) {
+  .cid-r8h7UrMf8w .container .carousel-control {
+    margin-bottom: 0;
+  }
+  .cid-r8h7UrMf8w .content-slider-wrap {
+    width: 100%!important;
+  }
+}
+.cid-r8h7UrMf8w .boxed-slider {
+  position: relative;
+  padding: 93px 0;
+}
+.cid-r8h7UrMf8w .boxed-slider > div {
+  position: relative;
+}
+.cid-r8h7UrMf8w .container img {
+  width: 100%;
+}
+.cid-r8h7UrMf8w .container img + .row {
+  position: absolute;
+  top: 50%;
+  left: 0;
+  right: 0;
+  -webkit-transform: translateY(-50%);
+  -moz-transform: translateY(-50%);
+  transform: translateY(-50%);
+  z-index: 2;
+}
+.cid-r8h7UrMf8w .mbr-section {
+  padding: 0;
+  background-attachment: scroll;
+}
+.cid-r8h7UrMf8w .mbr-table-cell {
+  padding: 0;
+}
+.cid-r8h7UrMf8w .container .carousel-indicators {
+  margin-bottom: 3px;
+}
+.cid-r8h7UrMf8w .carousel-caption {
+  top: 50%;
+  right: 0;
+  bottom: auto;
+  left: 0;
+  display: -webkit-flex;
+  align-items: center;
+  -webkit-transform: translateY(-50%);
+  transform: translateY(-50%);
+  -webkit-align-items: center;
+}
+.cid-r8h7UrMf8w .mbr-overlay {
+  z-index: 1;
+}
+.cid-r8h7UrMf8w .container-slide.container {
+  width: 100%;
+  min-height: 100vh;
+  padding: 0;
+}
+.cid-r8h7UrMf8w .carousel-item {
+  background-position: 50% 50%;
+  background-repeat: no-repeat;
+  background-size: cover;
+  -o-transition: -o-transform 0.6s ease-in-out;
+  -webkit-transition: -webkit-transform 0.6s ease-in-out;
+  transition: transform 0.6s ease-in-out, -webkit-transform 0.6s ease-in-out, -o-transform 0.6s ease-in-out;
+  -webkit-backface-visibility: hidden;
+  backface-visibility: hidden;
+  -webkit-perspective: 1000px;
+  perspective: 1000px;
+}
+@media (max-width: 576px) {
+  .cid-r8h7UrMf8w .carousel-item .container {
+    width: 100%;
+  }
+}
+.cid-r8h7UrMf8w .carousel-item-next.carousel-item-left,
+.cid-r8h7UrMf8w .carousel-item-prev.carousel-item-right {
+  -webkit-transform: translate3d(0, 0, 0);
+  transform: translate3d(0, 0, 0);
+}
+.cid-r8h7UrMf8w .active.carousel-item-right,
+.cid-r8h7UrMf8w .carousel-item-next {
+  -webkit-transform: translate3d(100%, 0, 0);
+  transform: translate3d(100%, 0, 0);
+}
+.cid-r8h7UrMf8w .active.carousel-item-left,
+.cid-r8h7UrMf8w .carousel-item-prev {
+  -webkit-transform: translate3d(-100%, 0, 0);
+  transform: translate3d(-100%, 0, 0);
+}
+.cid-r8h7UrMf8w .mbr-slider .carousel-control {
+  top: 50%;
+  width: 50px;
+  height: 50px;
+  margin-top: -1.5rem;
+  font-size: 35px;
+  background-color: rgba(0, 0, 0, 0.5);
+  border: 2px solid #fff;
+  border-radius: 50%;
+  transition: all .3s;
+}
+.cid-r8h7UrMf8w .mbr-slider .carousel-control.carousel-control-prev {
+  left: 0;
+  margin-left: 2.5rem;
+}
+.cid-r8h7UrMf8w .mbr-slider .carousel-control.carousel-control-next {
+  right: 0;
+  margin-right: 2.5rem;
+}
+.cid-r8h7UrMf8w .mbr-slider .carousel-control .mbr-iconfont {
+  font-size: 1.5rem;
+}
+@media (max-width: 767px) {
+  .cid-r8h7UrMf8w .mbr-slider .carousel-control {
+    top: auto;
+    bottom: 1rem;
+  }
+}
+.cid-r8h7UrMf8w .mbr-slider .carousel-indicators {
+  position: absolute;
+  bottom: 0;
+  margin-bottom: 1.5rem !important;
+}
+.cid-r8h7UrMf8w .mbr-slider .carousel-indicators li {
+  max-width: 15px;
+  height: 15px;
+  max-height: 15px;
+  margin: 3px;
+  background-color: rgba(0, 0, 0, 0.5);
+  border: 2px solid #fff;
+  border-radius: 50%;
+  opacity: .5;
+  transition: all .3s;
+}
+.cid-r8h7UrMf8w .mbr-slider .carousel-indicators li.active,
+.cid-r8h7UrMf8w .mbr-slider .carousel-indicators li:hover {
+  opacity: .9;
+}
+.cid-r8h7UrMf8w .mbr-slider .carousel-indicators li::after,
+.cid-r8h7UrMf8w .mbr-slider .carousel-indicators li::before {
+  content: none;
+}
+.cid-r8h7UrMf8w .mbr-slider .carousel-indicators.ie-fix {
+  left: 50%;
+  display: block;
+  width: 60%;
+  margin-left: -30%;
+  text-align: center;
+}
+@media (max-width: 576px) {
+  .cid-r8h7UrMf8w .mbr-slider .carousel-indicators {
+    display: none !important;
+  }
+}
+.cid-r8h7UrMf8w .mbr-slider > .container img {
+  width: 100%;
+}
+.cid-r8h7UrMf8w .mbr-slider > .container img + .row {
+  position: absolute;
+  top: 50%;
+  right: 0;
+  left: 0;
+  z-index: 2;
+  -moz-transform: translateY(-50%);
+  -webkit-transform: translateY(-50%);
+  transform: translateY(-50%);
+}
+.cid-r8h7UrMf8w .mbr-slider > .container .carousel-indicators {
+  margin-bottom: 3px;
+}
+@media (max-width: 576px) {
+  .cid-r8h7UrMf8w .mbr-slider > .container .carousel-control {
+    margin-bottom: 0;
+  }
+}
+.cid-r8h7UrMf8w .mbr-slider .mbr-section {
+  padding: 0;
+  background-attachment: scroll;
+}
+.cid-r8h7UrMf8w .mbr-slider .mbr-table-cell {
+  padding: 0;
+}
+.cid-r8h7UrMf8w .carousel-item .container.container-slide {
+  position: initial;
+  width: auto;
+  min-height: 0;
+}
+.cid-r8h7UrMf8w .full-screen .slider-fullscreen-image {
+  min-height: 100vh;
+  background-repeat: no-repeat;
+  background-position: 50% 50%;
+  background-size: cover;
+}
+.cid-r8h7UrMf8w .full-screen .slider-fullscreen-image.active {
+  display: -o-flex;
+}
+.cid-r8h7UrMf8w .full-screen .container {
+  width: auto;
+  padding-right: 0;
+  padding-left: 0;
+}
+.cid-r8h7UrMf8w .full-screen .carousel-item .container.container-slide {
+  width: 100%;
+  min-height: 100vh;
+  padding: 0;
+}
+.cid-r8h7UrMf8w .full-screen .carousel-item .container.container-slide img {
+  display: none;
+}
+.cid-r8h7UrMf8w .mbr-background-video-preview {
+  position: absolute;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  left: 0;
+}
+.cid-r8h7UrMf8w .mbr-overlay ~ .container-slide {
+  z-index: auto;
+}
+.cid-r8h7UrMf8w .mbr-slider.slide .container {
+  overflow: hidden;
+  padding: 0;
+}
+.cid-r8h7UrMf8w .carousel-inner {
+  height: 100%;
+}
+.cid-r8h7UrMf8w .slider-fullscreen-image {
+  height: 100%;
+  background: transparent !important;
+}
+.cid-r8h7UrMf8w .image_wrapper {
+  height: 400px;
+  width: 100%;
+  position: relative;
+  display: inline-block;
+}
+.cid-r8h7UrMf8w .image_wrapper img {
+  width: auto !important;
+  height: 100%;
+}
+.cid-r8h7UrMf8w .carousel-item .container-slide {
+  text-align: center;
+}
+.cid-r8h7UrMf8w .content-slider-wrap {
+  width: 60%;
 }
 .cid-r61f7mrCIc {
   padding-top: 30px;
@@ -2766,10 +3028,6 @@ body {
 .cid-r61017NpER .collapsed .navbar-collapse.show .navbar-nav .nav-item {
   clear: both;
 }
-.cid-r61017NpER .collapsed .navbar-collapse.collapsing .navbar-nav .nav-item:last-child,
-.cid-r61017NpER .collapsed .navbar-collapse.show .navbar-nav .nav-item:last-child {
-  margin-bottom: 1rem;
-}
 .cid-r61017NpER .collapsed .navbar-collapse.collapsing .navbar-buttons,
 .cid-r61017NpER .collapsed .navbar-collapse.show .navbar-buttons {
   text-align: center;
@@ -2864,10 +3122,6 @@ body {
   .cid-r61017NpER .navbar-collapse.show .navbar-nav .nav-item {
     clear: both;
   }
-  .cid-r61017NpER .navbar-collapse.collapsing .navbar-nav .nav-item:last-child,
-  .cid-r61017NpER .navbar-collapse.show .navbar-nav .nav-item:last-child {
-    margin-bottom: 1rem;
-  }
   .cid-r61017NpER .navbar-collapse.collapsing .navbar-buttons,
   .cid-r61017NpER .navbar-collapse.show .navbar-buttons {
     text-align: center;
@@ -2936,67 +3190,28 @@ body {
 .cid-r61fBdwvEb .mbr-section-subtitle {
   color: #232323;
 }
-.cid-r61bwjaICL {
+.cid-r8hd9bNnAK {
   padding-top: 0px;
   padding-bottom: 0px;
   background-color: #ffffff;
 }
-.cid-r61bwjaICL .mbr-slider .carousel-control {
-  background: #1b1b1b;
+.cid-r8hd9bNnAK .line {
+  background-color: #ffffff;
+  color: #ffffff;
+  align: center;
+  height: 2px;
+  margin: 0 auto;
 }
-.cid-r61bwjaICL .mbr-slider .carousel-control-prev {
-  left: 0;
-  margin-left: 2.5rem;
+.cid-r8hd9bNnAK .section-text {
+  padding: 2rem 0;
 }
-.cid-r61bwjaICL .mbr-slider .carousel-control-next {
-  right: 0;
-  margin-right: 2.5rem;
+.cid-r8hd9bNnAK .inner-container {
+  margin: 0 auto;
 }
-.cid-r61bwjaICL .mbr-slider .modal-body .close {
-  background: #1b1b1b;
-}
-.cid-r61bwjaICL .mbr-gallery-item > div::before {
-  content: '';
-  position: absolute;
-  left: 0;
-  top: 0;
-  width: 100%;
-  height: 100%;
-  background: #554346;
-  opacity: 0;
-  -webkit-transition: 0.2s opacity ease-in-out;
-  transition: 0.2s opacity ease-in-out;
-  background: linear-gradient(to left, #554346, #45505b) !important;
-}
-.cid-r61bwjaICL .mbr-gallery-item > div:hover .mbr-gallery-title::before {
-  background: transparent !important;
-}
-.cid-r61bwjaICL .mbr-gallery-item > div:hover:before {
-  opacity: 0.7 !important;
-}
-.cid-r61bwjaICL .mbr-gallery-title {
-  font-size: .9em;
-  position: absolute;
-  display: block;
-  width: 100%;
-  bottom: 0;
-  padding: 1rem;
-  color: #fff;
-  z-index: 2;
-}
-.cid-r61bwjaICL .mbr-gallery-title:before {
-  content: " ";
-  width: 100%;
-  height: 100%;
-  top: 0;
-  left: 0;
-  z-index: -1;
-  position: absolute;
-  background: #554346 !important;
-  opacity: 0.7;
-  -webkit-transition: 0.2s background ease-in-out;
-  transition: 0.2s background ease-in-out;
-  background: linear-gradient(to left, #554346, #45505b) !important;
+@media (max-width: 768px) {
+  .cid-r8hd9bNnAK .inner-container {
+    width: 100% !important;
+  }
 }
 .cid-r61fHh821G {
   padding-top: 45px;
@@ -3006,67 +3221,28 @@ body {
 .cid-r61fHh821G .mbr-section-subtitle {
   color: #232323;
 }
-.cid-r61bASeuGD {
+.cid-r8hd9BUgO8 {
   padding-top: 0px;
   padding-bottom: 0px;
   background-color: #ffffff;
 }
-.cid-r61bASeuGD .mbr-slider .carousel-control {
-  background: #1b1b1b;
+.cid-r8hd9BUgO8 .line {
+  background-color: #ffffff;
+  color: #ffffff;
+  align: center;
+  height: 2px;
+  margin: 0 auto;
 }
-.cid-r61bASeuGD .mbr-slider .carousel-control-prev {
-  left: 0;
-  margin-left: 2.5rem;
+.cid-r8hd9BUgO8 .section-text {
+  padding: 2rem 0;
 }
-.cid-r61bASeuGD .mbr-slider .carousel-control-next {
-  right: 0;
-  margin-right: 2.5rem;
+.cid-r8hd9BUgO8 .inner-container {
+  margin: 0 auto;
 }
-.cid-r61bASeuGD .mbr-slider .modal-body .close {
-  background: #1b1b1b;
-}
-.cid-r61bASeuGD .mbr-gallery-item > div::before {
-  content: '';
-  position: absolute;
-  left: 0;
-  top: 0;
-  width: 100%;
-  height: 100%;
-  background: #554346;
-  opacity: 0;
-  -webkit-transition: 0.2s opacity ease-in-out;
-  transition: 0.2s opacity ease-in-out;
-  background: linear-gradient(to left, #554346, #45505b) !important;
-}
-.cid-r61bASeuGD .mbr-gallery-item > div:hover .mbr-gallery-title::before {
-  background: transparent !important;
-}
-.cid-r61bASeuGD .mbr-gallery-item > div:hover:before {
-  opacity: 0.7 !important;
-}
-.cid-r61bASeuGD .mbr-gallery-title {
-  font-size: .9em;
-  position: absolute;
-  display: block;
-  width: 100%;
-  bottom: 0;
-  padding: 1rem;
-  color: #fff;
-  z-index: 2;
-}
-.cid-r61bASeuGD .mbr-gallery-title:before {
-  content: " ";
-  width: 100%;
-  height: 100%;
-  top: 0;
-  left: 0;
-  z-index: -1;
-  position: absolute;
-  background: #554346 !important;
-  opacity: 0.7;
-  -webkit-transition: 0.2s background ease-in-out;
-  transition: 0.2s background ease-in-out;
-  background: linear-gradient(to left, #554346, #45505b) !important;
+@media (max-width: 768px) {
+  .cid-r8hd9BUgO8 .inner-container {
+    width: 100% !important;
+  }
 }
 .cid-r6102qFFLL .navbar {
   padding: .5rem 0;
@@ -3295,10 +3471,6 @@ body {
 .cid-r6102qFFLL .collapsed .navbar-collapse.show .navbar-nav .nav-item {
   clear: both;
 }
-.cid-r6102qFFLL .collapsed .navbar-collapse.collapsing .navbar-nav .nav-item:last-child,
-.cid-r6102qFFLL .collapsed .navbar-collapse.show .navbar-nav .nav-item:last-child {
-  margin-bottom: 1rem;
-}
 .cid-r6102qFFLL .collapsed .navbar-collapse.collapsing .navbar-buttons,
 .cid-r6102qFFLL .collapsed .navbar-collapse.show .navbar-buttons {
   text-align: center;
@@ -3392,10 +3564,6 @@ body {
   .cid-r6102qFFLL .navbar-collapse.collapsing .navbar-nav .nav-item,
   .cid-r6102qFFLL .navbar-collapse.show .navbar-nav .nav-item {
     clear: both;
-  }
-  .cid-r6102qFFLL .navbar-collapse.collapsing .navbar-nav .nav-item:last-child,
-  .cid-r6102qFFLL .navbar-collapse.show .navbar-nav .nav-item:last-child {
-    margin-bottom: 1rem;
   }
   .cid-r6102qFFLL .navbar-collapse.collapsing .navbar-buttons,
   .cid-r6102qFFLL .navbar-collapse.show .navbar-buttons {
